TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "131520732773776" [label="Start"];
  "131520732773776" -> "131520732763984";
  "131520732763984" [label="Code"];
  "131520732763984" -> "131520732761248";
  "131520732763984" -> "131520732772672";
  "131520732763984" -> "131520732772048";
  "131520732761248" [label="#include"];
  "131520732772672" [label="<stdio.h>"];
  "131520732772048" [label="Function"];
  "131520732772048" -> "131520732771952";
  "131520732772048" -> "131520732763504";
  "131520732772048" -> "131520732772528";
  "131520732771952" [label="main"];
  "131520732763504" [label="Parameters"];
  "131520732772528" [label="Code"];
  "131520732772528" -> "131520732758704";
  "131520732772528" -> "131520732913264";
  "131520732772528" -> "131520732907168";
  "131520732772528" -> "131520732918304";
  "131520732758704" [label="Declaration"];
  "131520732758704" -> "131520732760384";
  "131520732758704" -> "131520732772000";
  "131520732760384" [label="a"];
  "131520732772000" [label="5"];
  "131520732913264" [label="Declaration"];
  "131520732913264" -> "131520732920656";
  "131520732913264" -> "131520732907840";
  "131520732920656" [label="b"];
  "131520732907840" [label="Expr"];
  "131520732907840" -> "131520732906448";
  "131520732907840" -> "131520732906304";
  "131520732906448" [label="&"];
  "131520732906304" [label="a"];
  "131520732907168" [label="Assignment"];
  "131520732907168" -> "131520732913216";
  "131520732907168" -> "131520732919024";
  "131520732913216" [label="Expr"];
  "131520732913216" -> "131520732915712";
  "131520732913216" -> "131520732914416";
  "131520732913216" -> "131520732915904";
  "131520732915712" [label="b"];
  "131520732914416" [label="+"];
  "131520732915904" [label="1"];
  "131520732919024" [label="8"];
  "131520732918304" [label="Return"];
  "131520732918304" -> "131520732911536";
  "131520732918304" -> "131520732906736";
  "131520732911536" [label="return"];
  "131520732906736" [label="0"];
}
